fixed project thumb layout issue

--- a/src/styles/_helpers.scss
+++ b/src/styles/_helpers.scss
@@ -14,6 +14,6 @@
 	float: right;
 	clear: right;
 	display: inline-block;
-	margin-bottom: 0.6em;
+	margin-bottom: 1em;
 	color: $header-font;
 }
