--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -99,7 +99,7 @@
 				padding-bottom: 1em;
 
 				a {
-					margin-left: 1.3em;
+					margin-left: 2.5em;
 					color: $header-font;
 				}
 			}
@@ -193,7 +193,7 @@
 
 				img {
 					width: 100%;
-					border-radius: 1em 1em 0 0;
+					border-radius: 0.9em 0.9em 0 0;
 				}
 			}
 
@@ -384,12 +384,14 @@
 		}
 
 		.projects-grid {
-			display: flex;
+			display: grid;
 			flex-flow: row wrap;
-			justify-content: flex-start;
+			justify-content: space-between;
+			align-content: flex-start;
+			grid-template-columns: repeat(auto-fill, 50%);
 
 			.project-thumb {
-				width: 45%;
+				
 			}
 		}
 	}
@@ -460,9 +462,9 @@
 	.portfolio {
 
 		.projects-grid {
+			grid-template-columns: repeat(auto-fill, 33%);
 
 			.project-thumb {
-				width: 30%;
 				transition: all .2s ease-in-out;
 			}
 
